[package]
name = "geolocation-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dioxus = { git = "https://github.com/wheregmis/dioxus.git", branch = "native_api_testing" }
dioxus-mobile-geolocation = { git = "https://github.com/wheregmis/mobile-geolocation.git", features = [
    "location-fine",
] }

[features]
default = ["mobile"]
server = ["dioxus/server"]
web = ["dioxus/web"]
mobile = ["dioxus/mobile"]
